objects/Key_Product__c.object
<CustomObject>
    <description>This custom object will be used as a child object on Escalations to indicate the products associated with the escalation.</description>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Support_Product__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Key Products</relationshipLabel>
        <relationshipName>Key_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Support_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Product</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Key Products</relationshipLabel>
        <relationshipName>Key_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Product</label>
    <nameField>
        <displayFormat>KP{00000000}</displayFormat>
        <label>Key Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>